--- a/config/lastfm.config.properties
+++ b/config/lastfm.config.properties
@@ -1,3 +1,5 @@
 
 access.apikey = <ENTER YOUR API KEY HERE>
+access.secret = <ENTER YOUR API KEY SECRET HERE>
 access.user-agent = tst
+access.debug-mode = true
